OJM_"오늘 점심 뭐먹지?" project_1차 저장

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.0'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id 'application' // application 플러그인 추가
 }
 
 group = 'toy'
@@ -12,10 +14,30 @@ repositories {
 	mavenCentral()
 }
 
+bootJar {
+	// mainClassName 설정 제거
+}
+
+application {
+	// 메인 클래스 설정
+	mainClassName = 'toy.ojm.controller.MySpringBootApplication'
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.projectlombok:lombok:1.18.22'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// Slf4j 및 Logback 추가
+	implementation 'org.slf4j:slf4j-api:1.7.32'
+	implementation 'ch.qos.logback:logback-classic:1.2.6'
+
+	// 기존 의존성 유지
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+
+	compileOnly 'org.projectlombok:lombok:1.18.22'
+	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 }
 
 tasks.named('test') {
