--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     compileOnly 'org.projectlombok:lombok:1.18.22'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
-
+	implementation 'mysql:mysql-connector-java:8.0.27'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
