--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    compileOnly 'org.projectlombok:lombok:1.18.22'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compileOnly 'org.projectlombok:lombok:1.18.22'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
-	implementation 'mysql:mysql-connector-java:8.0.27'
+	implementation 'mysql:mysql-connector-java:8.0.26' // MySQL 버전에 따라 버전을 변경할 수 있습니다.
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
