--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/your_database_name
-    username: root
-    password:
+    url: jdbc:mysql://127.0.0.1:3306/OJMDB
+    username: ojm
+    password: 4027
   thymeleaf:
     cache: false
   jpa:
