--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 	implementation 'mysql:mysql-connector-java:8.0.26'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.13.0'
+//	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.13.0'
 	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.4'
 	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.4'
 }
