--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.4'
 	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.4'
-	implementation 'org.geotools:gt-main:25.4'
+	implementation 'org.osgeo:proj4j:0.1.1'
 }
 
 
