--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.4'
 	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.4'
-	implementation 'org.osgeo:proj4j:0.1.1'
+    implementation 'org.locationtech.proj4j:proj4j:1.3.0'
 }
-
 
 tasks.named('test') {
 	useJUnitPlatform()
