--- a/build.gradle
+++ b/build.gradle
@@ -29,14 +29,18 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	testImplementation 'org.projectlombok:lombok:1.18.28'
 	compileOnly 'org.projectlombok:lombok:1.18.22'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 	implementation 'mysql:mysql-connector-java:8.0.26'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.4'
 	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.4'
+	implementation 'org.locationtech.proj4j:proj4j-epsg:1.3.0'
 	implementation 'org.locationtech.proj4j:proj4j:1.3.0'
+
+
+	testImplementation 'org.projectlombok:lombok:1.18.28'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
