--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,14 @@ spring:
 #openapi:
 #  url: http://openapi.seoul.go.kr:8088/6f524d4876746a73383056664d6843/xml/LOCALDATA_072404/1/5/
 
+
 logging:
   level:
     toy.ojm: DEBUG
     org.springframework.web: DEBUG
+
+#logging:
+#  level:
+#    root: INFO
+#    org.springframework.web: DEBUG
+#    toy.ojm: DEBUG
