--- a/build.gradle
+++ b/build.gradle
@@ -17,25 +17,25 @@ bootJar {
     // mainClassName 설정 제거
 }
 
-//application {
-//	// 메인 클래스 설정
-//	mainClassName = 'toy.ojm.controller.MySpringBootApplication'
-//}
 
 dependencies {
-	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+	// JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// MySQL
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	// Thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+
 	compileOnly 'org.projectlombok:lombok:1.18.22'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
-	implementation 'mysql:mysql-connector-java:8.0.26'
-	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.4'
-	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.4'
-	implementation 'org.locationtech.proj4j:proj4j-epsg:1.3.0'
-	implementation 'org.locationtech.proj4j:proj4j:1.3.0'
 
+	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.4'
+	implementation 'org.locationtech.proj4j:proj4j:1.3.0'
 
 	testImplementation 'org.projectlombok:lombok:1.18.28'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
