--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ bootJar {
 
 
 dependencies {
+	// POI
+	implementation 'org.apache.poi:poi:5.2.3'
+	implementation 'org.apache.poi:poi-ooxml:5.2.3'
+
 	// JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	// MySQL
