--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ bootJar {
 
 dependencies {
 	// proj4j를 이용한 좌표 변환
-	implementation 'org.locationtech.proj4j:proj4j:1.2.2'
+//	implementation 'org.locationtech.proj4j:proj4j:1.2.2'
+	implementation 'org.locationtech.proj4j:proj4j:1.3.0'
 
 	// POI
 	implementation 'org.apache.poi:poi:5.2.3'
