--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	// MySQL
 	runtimeOnly 'com.mysql:mysql-connector-j'
+    // H2
+	runtimeOnly 'com.h2database:h2'
 
 	// Crawling
 	implementation 'org.jsoup:jsoup:1.15.4'
