--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.1.0'
     id 'application' // application 플러그인 추가
+	id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10' // QueryDSL 플러그인 추가
+
 }
 
 group = 'toy'
@@ -35,8 +37,19 @@ dependencies {
 
 	// JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 	// MySQL
 	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	//  QueryDSL 적용을 위한 의존성 (SpringBoot3.0 부터는 jakarta 사용해야함)
+	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
+	// querydsl JPAAnnotationProcessor 사용 지정
+	annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
+	// java.lang.NoClassDefFoundError (javax.annotation.Generated) 발생 대응
+	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+	// java.lang.NoClassDefFoundError(javax.annotation.Entity) 발생 대응
+	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+
 
 	// Crawling
 	implementation 'org.jsoup:jsoup:1.15.4'
