--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,27 @@ kakao:
 spring:
   config:
     activate:
+      on-profile: local-mysql-sun
+
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/${database.name}
+    username: ${database.username}
+    password: ${database.password}
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+        show_sql: true
+        format_sql: true
+
+
+---
+
+spring:
+  config:
+    activate:
       on-profile: local-mysql
 
   datasource:
