리다이렉션 방법 수정 : 제공되지 않는 페이지 요청 시 홈으로 리다이렉트 (엔드포인트가 잘못되었을 경우)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,11 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: none
+  mvc:
+    throw-exception-if-no-handler-found: true
+  web:
+    resources:
+      add-mappings: false
 
 logging:
   level:
@@ -14,7 +19,6 @@ logging:
 
 kakao:
   appKey: ${KAKAO_REST_API_KEY}
-
 ---
 
 spring:
