로그인 세션 만료시간 지정, 비밀번호 암호화

--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,9 @@ dependencies {
 
 	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// BcryptPasswordEncoder 를 쓰기 위해
+	implementation 'org.springframework.security:spring-security-core:5.8.1'
 }
 
 tasks.named('test') {
