서버 이미지 노출되지 않는 이슈 해결중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
   web:
     resources:
       add-mappings: false
+      static-locations: classpath:/static/
 
 logging:
   config: classpath:log/logback-local.xml
