서버 이미지 노출되지 않는 이슈 해결중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     static-path-pattern: /static/**
   web:
     resources:
-      add-mappings: false
+#      add-mappings: false
       static-locations: classpath:/static/
 
 logging:
