서버 이미지 노출되지 않는 이슈 해결 과정 중 불필요한 방법은 없는지 확인

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,7 @@ spring:
     static-path-pattern: /static/**
   web:
     resources:
-      static-locations: classpath:/static/
-#      add-mappings: false
+      add-mappings: false
 
 logging:
   config: classpath:log/logback-local.xml
