--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,6 +41,8 @@ spring:
       hibernate:
         format_sql: true
         use_sql_comments: true
+  webdriver:
+    browser-type: CHROME
 
 logging:
   level:
@@ -110,6 +112,8 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
         show_sql: true
         format_sql: false
+  webdriver:
+    browser-type: FIREFOX
 
 logging:
   config: classpath:log/logback-live.xml
