--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -110,7 +110,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
-        show_sql: true
+        show_sql: false
         format_sql: false
 logging:
   config: classpath:log/logback-live.xml
