--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
 #    root: DEBUG
 
 kakao:
-  appKey: ${KAKAO_REST_API_KEY:defaultDummyValue}
+  appKey: ${KAKAO_REST_API_KEY:defaultDummyValue}r
 ---
 spring:
   config:
@@ -34,15 +34,17 @@ spring:
       ${database.password}
 
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
-        format_sql: true
-        use_sql_comments: true
+        format_sql: false
+        use_sql_comments: false
 logging:
   level:
+    root: INFO
+    toy.ojm.infrastructure: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 
