--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,11 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.0'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.jetbrains.kotlin.jvm'
 }
 
 group = 'toy'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
-targetCompatibility = '17'
 
 repositories {
 	mavenCentral()
@@ -65,8 +64,12 @@ dependencies {
 
 	// BcryptPasswordEncoder 를 쓰기 위해
 	implementation 'org.springframework.security:spring-security-core:5.8.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+kotlin {
+    jvmToolchain(17)
 }
