--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ repositories {
 }
 
 dependencies {
+	// Spring AOP
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
+
 	// Aspose.Cells for Java
 	implementation 'com.aspose:aspose-cells:20.8'
 
@@ -58,6 +61,9 @@ dependencies {
 	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+	// Slack
+	implementation 'com.slack.api:slack-api-client:1.43.0'
 
 	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
